Ensure our spacing and border is non-mobile specific. Added spacing for header content and Roadmap Details. Made Roadmap Circle...well circular.

--- a/src/less/roadmap.less
+++ b/src/less/roadmap.less
@@ -4,26 +4,42 @@
 
 body {
 	&:not([dir="rtl"]) { // LTR
-		div[data-budgie-component="roadmap"] { // Roadmap Content
-			& > div[data-budgie-component="roadmap-items"] { // Roadmap Items
-				border-left: 1px solid @grey;
-				margin-left: 32px;
+		@media screen and (min-width: 1024px) { // Non-mobile
+			div[data-budgie-component="roadmap"] { // Roadmap Content
+				& > div[data-budgie-component="roadmap-items"] { // Roadmap Items
+					border-left: 1px solid @grey;
+					margin-left: 32px;
 
-				div[data-budgie-component="roadmap-circle"] { // Roadmap Circle
-					margin-left: -32px;
+					div[data-budgie-component="roadmap-circle"] { // Roadmap Circle
+						margin-left: -32px;
+					}
+
+					& > div[data-budgie-component="budgie-header"] > b,
+					& > div[data-budgie-component="budgie-header"] > section,
+					& > section {
+						margin-left: 48px;
+					}
 				}
 			}
 		}
 	}
 
 	&[dir="rtl"] { // RTL
-		div[data-budgie-component="roadmap"] { // Roadmap Content
-			& > div[data-budgie-component="roadmap-items"] { // Roadmap Items
-				border-right: 1px solid @grey;
-				margin-right: 32px;
+		@media screen and (min-width: 1024px) { // Non-mobile
+			div[data-budgie-component="roadmap"] { // Roadmap Content
+				& > div[data-budgie-component="roadmap-items"] { // Roadmap Items
+					border-right: 1px solid @grey;
+					margin-right: 32px;
 
-				div[data-budgie-component="roadmap-circle"] { // Roadmap Circle
-					margin-right: -32px;
+					div[data-budgie-component="roadmap-circle"] { // Roadmap Circle
+						margin-right: -32px;
+					}
+
+					& > div[data-budgie-component="budgie-header"] > b,
+					& > div[data-budgie-component="budgie-header"] > section,
+					& > section {
+						margin-right: 48px;
+					}
 				}
 			}
 		}
@@ -54,6 +70,7 @@ div[data-budgie-component="roadmap"] { // Roadmap Content
 					color: @white;
 					line-height: 64px;
 					text-align: center;
+					border-radius: 64px;
 					position: absolute;
 
 					.createColorTypes(@maxnum, @index: 1) when (@index <= @maxnum) {
